@@ -1,0 +1,76 @@
+{
+    IBClasses = (
+        {
+            ACTIONS = {
+                adEditBackground = id; 
+                adEditCancel = id; 
+                adEditFont = id; 
+                adEditForeground = id; 
+                adEditOK = id; 
+                adbAddEntry = id; 
+                adbCancel = id; 
+                adbEditEntry = id; 
+                adbGotoQuickOpen = id; 
+                adbOk = id; 
+                adbRemoveEntry = id; 
+            }; 
+            CLASS = AddressBook; 
+            LANGUAGE = ObjC; 
+            OUTLETS = {
+                adBackground = NSColorWell; 
+                adCommand = NSTextField; 
+                adEncoding = NSComboBox; 
+                adForegroud = NSColorWell; 
+                adName = NSTextField; 
+                adTable = NSTableView; 
+                adTextExample = NSTextView; 
+            }; 
+            SUPERCLASS = NSObject; 
+        }, 
+        {CLASS = PTYScrollView; LANGUAGE = ObjC; SUPERCLASS = NSScrollView; }, 
+        {CLASS = PTYTextView; LANGUAGE = ObjC; SUPERCLASS = NSTextView; }, 
+        {CLASS = PTYWindow; LANGUAGE = ObjC; SUPERCLASS = NSWindow; }, 
+        {
+            ACTIONS = {
+                clearBuffer = id; 
+                closeCurrentSession = id; 
+                logStart = id; 
+                logStop = id; 
+                newSession = id; 
+                nextSession = id; 
+                previousSession = id; 
+                saveSession = id; 
+                setMainMenu = id; 
+                switchSession = id; 
+                windowConfigBackground = id; 
+                windowConfigCancel = id; 
+                windowConfigFont = id; 
+                windowConfigForeground = id; 
+                windowConfigNAFont = id; 
+                windowConfigOk = id; 
+            }; 
+            CLASS = PseudoTerminal; 
+            LANGUAGE = ObjC; 
+            OUTLETS = {
+                "AI_CODE" = id; 
+                "AI_ON" = id; 
+                "CONFIG_ANTIALIAS" = id; 
+                "CONFIG_BACKGROUND" = id; 
+                "CONFIG_COL" = id; 
+                "CONFIG_ENCODING" = id; 
+                "CONFIG_EXAMPLE" = id; 
+                "CONFIG_FOREGROUND" = id; 
+                "CONFIG_NAEXAMPLE" = id; 
+                "CONFIG_NAME" = id; 
+                "CONFIG_PANEL" = id; 
+                "CONFIG_ROW" = id; 
+                "CONFIG_SELECTION" = id; 
+                "CONFIG_TRANS2" = id; 
+                "CONFIG_TRANSPARENCY" = id; 
+                WINDOW = id; 
+            }; 
+            SUPERCLASS = NSWindowController; 
+        }
+    ); 
+    IBVersion = 1; 
+}
