@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: PseudoTerminal.m,v 1.140 2003-04-10 15:31:20 ujwal Exp $
+// $Id: PseudoTerminal.m,v 1.141 2003-04-10 20:37:38 yfabian Exp $
 //
 /*
  **  PseudoTerminal.m
@@ -1123,8 +1123,10 @@ static NSString *ConfigToolbarItem = @"Config";
                 
             // set the background color for the scrollview with the appropriate transparency
             bgColor = [[CONFIG_BACKGROUND color] colorWithAlphaComponent: (1-[CONFIG_TRANSPARENCY intValue]/100.0)];
+            [[currentPtySession SCROLLVIEW] setBackgroundColor: bgColor];
             [currentPtySession setFGColor:  [CONFIG_FOREGROUND color]];
             [currentPtySession setBGColor:  bgColor];
+            [[currentPtySession TEXTVIEW] setNeedsDisplay:YES];
         }
 
         [[[self currentSession] TEXTVIEW] moveLastLine];
