@@ -1,3 +1,8 @@
+2003-04-10	fabian
+    * Fixed some bugs in setNeedsDisplayInRect of PTYTextView
+    * Removed background attributes when background is default
+    * Fixed a email error on website
+
 2003-04-10	ujwal
 
     * Put back in the code for not auto-scrolling down 
